--- a/018/i.html
+++ b/018/i.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="app.js"></script>
+    <script src="app2.js" defer></script>
     <title>Document 18</title>
 </head>
 <body>
-    
+    <button>GO</button>
 </body>
 </html>
